k8s/overlays/prod/images-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier
spec:
  template:
    spec:
      containers:
        - name: backend
          image: ghcr.io/nadzzdan/3tier-backend:sha-bc7ebcd038d5089731e85a9077fe09e8cab4d534
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/nadzzdan/3tier-frontend:sha-bc7ebcd038d5089731e85a9077fe09e8cab4d534
